src/objects/Hotel_Review__c.object
<CustomObject>
    <fields>
        <fullName>Advantages__c</fullName>
        <label>Advantages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Быстрое обслуживание</fullName>
                </value>
                <value>
                    <fullName>Вежливый персонал</fullName>
                </value>
                <value>
                    <fullName>Бесплатный Wi-Fi</fullName>
                </value>
                <value>
                    <fullName>Тихие соседи</fullName>
                </value>
                <value>
                    <fullName>Вкусная еда</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Name__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Auto Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hotels Reviews</relationshipLabel>
        <relationshipName>Hotels_Reviews</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Disadvantages__c</fullName>
        <label>Disadvantages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Медленное обслуживание</fullName>
                </value>
                <value>
                    <fullName>Грубый персонал</fullName>
                </value>
                <value>
                    <fullName>Шумные соседи</fullName>
                </value>
                <value>
                    <fullName>Неудобное расположение</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Rating__c</fullName>
        <label>Hotel Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Hotels Reviews</relationshipLabel>
        <relationshipName>Hotels_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Personal_Rating__c</fullName>
        <label>Personal Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Rating__c</fullName>
        <label>Product Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Hotels Reviews</relationshipLabel>
        <relationshipName>Hotels_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <label>Review</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Hotel Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hotel Review  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>